--- a/arpa-cv.tex
+++ b/arpa-cv.tex
@@ -12,16 +12,16 @@
 
 
 
-\input{teaching}
+%\input{teaching}
 
-\input{cp}
+%\input{cp}
 
-\input{problem-setting}
+%\input{problem-setting}
 
-\input{work}
+%\input{work}
 
-\input{education}
+%\input{education}
 
-\input{recommendation}
+%\input{recommendation}
 
 \end{document}
