--- a/cp.tex
+++ b/cp.tex
@@ -26,6 +26,7 @@
     \entry{Codeforces LATOKEN Round 1}{39th place}
     \entry{Codeforces Global Round 3}{68th place}
     \entry{Meta HackerCup 2021}{116th place}
+    \entry{Reply Code Challenge 2025}{9th place}
     \entry{June Cook-Off 2019}{12th place}
     \entry{Iran CodeCup 2018}{3rd place}
     \entry{Iran CodeCup 2021}{3rd place}
