--- a/problem-setting.tex
+++ b/problem-setting.tex
@@ -11,7 +11,10 @@
     \item Author of one of the highest-rated editorials on Codeforces
   \end{subsection}
 
-  \begin{subsection}{LeetCode}{Contest Coordinator}{2023 – 2024}{CA, US (Remote)}
+  \begin{subsection}{LeetCode}{Contest Coordinator}{2023 -- 2024}{CA, US (Remote)}
+  \end{subsection}
+
+  \begin{subsection}{ICPC Asia West Continent Championship}{Judge}{2025}{}
   \end{subsection}
 
   \begin{subsection}{Africa and Arab Collegiate Programming Contest (ACPC)}{Judge}{2021 – 2022}{Cairo, Egypt (Remote)}
@@ -19,6 +22,14 @@
 
   \begin{subsection}{European Girls Olympiad of Informatics (EGOI)}{Judge and Scientific Committee Member}{2022}{Antalya, Turkey}
   \end{subsection}
+
+  \begin{subsection}{European Junior Olympiad of Informatics (EJOI)}{Problem Setter}{2025}{Sofia, Bulgaria (Remote)}
+  \end{subsection}
+
+
+  \begin{subsection}{ICPC Tehran Regional Contest}{Judge}{2023 –}{Tehran, Iran}
+  \end{subsection}
+
 
   \begin{subsection}{Turkish Olympiad of Informatics}{Problem setter}{2022}{Turkey (Remote)}
   \end{subsection}
