--- a/teaching.tex
+++ b/teaching.tex
@@ -16,7 +16,7 @@
     \begin{subsectionnobullet}{OCPC Camp}{Led problem-solving sessions for teams preparing for the ICPC World Finals}{2024}{Osijek, Croatia}
     \end{subsectionnobullet}
 
-    \begin{subsectionnobullet}{GoForGold Camp}{Coached top Indian teams in preparation for the ICPC World Finals}{2024}{New Delhi, India}
+    \begin{subsectionnobullet}{GoForGold Camp}{Coached top Indian teams in preparation for the ICPC World Finals}{2024 -- 2025}{New Delhi, India}
     \end{subsectionnobullet}
 
   \vspace{0.5cm}
