--- a/kyvernitis-resume.cls
+++ b/kyvernitis-resume.cls
@@ -163,18 +163,27 @@
 % Define command for resume subsections with no bullets
 % All arguments are compulsory
 % #1: Name, #2: Description, #3: Time Period, #4: Location
-\newenvironment{subsectionnobullet}[4]{
+\usepackage{environ}
+
+\NewEnviron{subsectionnobullet}[4]{%
     \phantomsection
-    \addcontentsline{toc}{subsection}{#1}
-    \textbf{#1} \hfill \textit{#3} \newline
-    \textit{#2} \hfill \textit{#4}
+    \addcontentsline{toc}{subsection}{#1}%
+    \textbf{#1} \hfill \textit{#3}\newline
+    \textit{#2} \hfill \textit{#4}%
     \smallskip
-    \begin{list}{}{
-        \leftmargin=0em \itemindent=0em \labelwidth=0em \labelsep=0em
-    }
-    \itemsep -0.7em \vspace{-0.7em}
-}{
-    \end{list}
+    % Check if the body contains \item
+    \def\tempbody{\BODY}%
+    \ifx\tempbody\empty
+        % nothing → just print header
+    \else
+        % has something → wrap in list
+        \begin{list}{}{%
+            \leftmargin=0em \itemindent=0em \labelwidth=0em \labelsep=0em
+        }%
+        \itemsep -0.7em \vspace{-0.7em}%
+        \BODY
+        \end{list}%
+    \fi
 }
 
 
