--- a/teaching.tex
+++ b/teaching.tex
@@ -16,7 +16,10 @@
     \begin{subsectionnobullet}{OCPC Camp}{Led problem-solving sessions for teams preparing for the ICPC World Finals}{2024}{Osijek, Croatia}
     \end{subsectionnobullet}
 
-    \begin{subsectionnobullet}{GoForGold Camp}{Coached top Indian teams in preparation for the ICPC World Finals}{2024 -- 2025}{New Delhi, India}
+    \begin{subsectionnobullet}{GoForGold}{GoForGold mission is to empower India in competitive programming}{2024 -- 2025}{India}
+    \item Coached teams going to ICPC World Finals in GoForGold Winter Camp 2024, New Dehli, India
+    \item Coached students going to IOI in GoForGold IOI Camp 2025, Online
+    \item Coached teams going to ICPC World Finals in GoForGold Summer Camp 2025, Pune, India
     \end{subsectionnobullet}
 
   \vspace{0.5cm}
