--- a/teaching.tex
+++ b/teaching.tex
@@ -31,9 +31,8 @@
     \item \textbf{Algorithms and Data Structures Instructor} – INOI Team Selection Camp for IOI (2019, 2022, 2023)
   \end{subsection}
 
-  \begin{subsectionnobullet}{Yazd University}{Lecturer}{2025 - Present}{Yazd, Iran}
+  \begin{subsectionnobullet}{Yazd University}{Lecturer}{2025}{Yazd, Iran}
     \item Design and Analysis of Algorithms
-    \item Competitive Programming
   \end{subsectionnobullet}
 
   \begin{subsectionnobullet}{Other Teaching Experiences}{Instructor for Algorithms and Data Structures\\Various high schools, universities, and national training programs}{2016 - Present}{}
