--- a/problem-setting.tex
+++ b/problem-setting.tex
@@ -26,6 +26,9 @@
   \begin{subsection}{European Junior Olympiad of Informatics (EJOI)}{Problem Setter}{2025}{Sofia, Bulgaria (Remote)}
   \end{subsection}
 
+  \begin{subsection}{Balkan Olympiad of Informatics (BOI)}{Problem Setter}{2025}{Udine, Italy (Remote)}
+  \end{subsection}
+
 
   \begin{subsection}{ICPC Tehran Regional Contest}{Judge}{2023 –}{Tehran, Iran}
   \end{subsection}
