--- a/problem-setting.tex
+++ b/problem-setting.tex
@@ -30,7 +30,7 @@
   \end{subsection}
 
 
-  \begin{subsection}{ICPC Tehran Regional Contest}{Judge}{2023 –}{Tehran, Iran}
+  \begin{subsection}{ICPC Tehran Regional Contest}{Judge}{2023 – Present}{Tehran, Iran}
   \end{subsection}
 
 
