--- a/work.tex
+++ b/work.tex
@@ -1,6 +1,19 @@
 
 \begin{section}{Work Experience}{
-    \begin{subsectionnobullet}{Mahsan}{Algorithm Design, C++, Network.\\ In the role, I was responsible for optimizing the code and algorithms. \\ There was a program that should've been able to run on huge amounts of data per second, so it should be optimized enough.}{2020-2023}{Tehran, Iran}
+    \begin{subsectionnobullet}{AlgoritmiAcademy}{Founder}{2023-Present}{Iran}
+    We are a dedicated team of Iranians passionate about sharing our experience in competitive programming. We advocate for personalized private classes with smaller groups, recognizing that everyone has a unique learning style and pace. Our educators are not only experienced but also adept at tailoring their methods to best suit each student. With backgrounds in both competing and coaching at the Iranian and International Olympiads in Informatics (IOI), we have witnessed the profound impact competitive programming can have on an individual.
+To date, we have organized several camps and private sessions, including:
+\item A camp in Croatia for students participating in the ICPC World Finals,
+\item Two camps in India for the top Indian teams.
+\item An online camp for the Azerbaijan IOI Team,
+\item An online camp for Uzbekistan students competing in the ICPC semi-finals,
     \end{subsectionnobullet}
+    
+    \begin{subsectionnobullet}{Mahsan}{Team lead}{2020-2023}{Tehran, Iran}
+    \item Algorithm Design, C++, Network.
+    \item In the role, I was responsible for optimizing the code and algorithms. 
+    \item There was a program that should've been able to run on huge amounts of data per second, so it should be optimized enough.
+    \end{subsectionnobullet}
+    
 }
 \end{section}
