--- a/teaching.tex
+++ b/teaching.tex
@@ -4,6 +4,18 @@
     \begin{subsectionnobullet}{International Training Camps}{}{2023 - Present}{}
     \end{subsectionnobullet}
 
+    \begin{subsectionnobullet}{OCPC Camp}{Led problem-solving sessions for teams preparing for the ICPC World Finals}{2024}{Osijek, Croatia}
+    \end{subsectionnobullet}
+
+    \begin{subsectionnobullet}{GoForGold}{GoForGold mission is to empower India in competitive programming}{2024 -- 2025}{India}
+    \item Coached teams going to ICPC World Finals in GoForGold Winter Camp 2024, New Delhi, India
+    \item Coached students going to the IOI in GoForGold IOI Camp 2025, Online
+    \item Coached teams going to ICPC World Finals in GoForGold Summer Camp 2025, Pune, India
+    \end{subsectionnobullet}
+
+    \begin{subsectionnobullet}{Saudi Arabian IOI Training Camp}{Trained the Saudi team for the IOI}{2026}{Jeddah, Saudi Arabia}
+    \end{subsectionnobullet}
+
     \begin{subsectionnobullet}{Syrian IOI Training Camp}{Trained the Syrian team for the IOI}{2023}{Damascus, Syria}
     \end{subsectionnobullet}
 
@@ -11,15 +23,6 @@
     \end{subsectionnobullet}
 
     \begin{subsectionnobullet}{Azerbaijani IOI Training Camp}{Trained the Azerbaijani team for the IOI}{2024}{Online}
-    \end{subsectionnobullet}
-
-    \begin{subsectionnobullet}{OCPC Camp}{Led problem-solving sessions for teams preparing for the ICPC World Finals}{2024}{Osijek, Croatia}
-    \end{subsectionnobullet}
-
-    \begin{subsectionnobullet}{GoForGold}{GoForGold mission is to empower India in competitive programming}{2024 -- 2025}{India}
-    \item Coached teams going to ICPC World Finals in GoForGold Winter Camp 2024, New Dehli, India
-    \item Coached students going to IOI in GoForGold IOI Camp 2025, Online
-    \item Coached teams going to ICPC World Finals in GoForGold Summer Camp 2025, Pune, India
     \end{subsectionnobullet}
 
   \vspace{0.5cm}
