--- a/teaching.tex
+++ b/teaching.tex
@@ -28,11 +28,15 @@
   \vspace{0.5cm}
 
   \begin{subsection}{Iran National Olympiad of Informatics (INOI)}{The INOI Summer Camp is the final stage of the INOI program, where students undergo intensive training and take final exams to determine medalists. The camp spans two months.}{2019 - Present}{Tehran, Iran}
-    \item \textbf{Summer Camp Director} – INOI Summer Camp (2024)
+    \item \textbf{Summer Camp Director} – INOI Summer Camp (2024, 2025)
     \item \textbf{Programming Class Director} – INOI Summer Camp (2023, 2024)
     \item \textbf{Algorithms and Data Structures Instructor} – INOI Summer Camp (2019 - Present)
     \item \textbf{Algorithms and Data Structures Instructor} – INOI Team Selection Camp for IOI (2019, 2022, 2023)
   \end{subsection}
+
+  \begin{subsectionnobullet}{Sharif University of Technology}{Lecturer}{2026}{Tehran, Iran}
+    \item Data Structures and Algorithms
+  \end{subsectionnobullet}
 
   \begin{subsectionnobullet}{Yazd University}{Lecturer}{2025}{Yazd, Iran}
     \item Design and Analysis of Algorithms
